correção design cadastro de guardas

--- a/cadastroGuardas.html
+++ b/cadastroGuardas.html
@@ -88,7 +88,7 @@
                                     </div>
                                      <div class="form-group">
                                         <label class="sr-only" for="senhaGuarda">Confirmar Senha</label>
-                                        <input type="password" name="confirmaSenhaGuarda" placeholder="Confirmar senha..." class="form-last-name form-control" id="confirmaSenhaGuarda" >
+                                        <input type="password" name="confirmaSenhaGuarda" placeholder="Confirmar senha..." class=" form-control" id="confirmaSenhaGuarda" >
                                     </div>
 			                        <div class="form-group">
 			                        	<label class="sr-only" for="sexoGuarda">Sexo</label>
