Lista e exclusão de guardas

--- a/cadastroGuardas.html
+++ b/cadastroGuardas.html
@@ -51,7 +51,7 @@
                             </div>
                             <div class="top-big-link">
                             	<a class="btn btn-link-1" href="#">Voltar</a>
-                            	<a class="btn btn-link-2" href="#">Ver Lista</a>
+                            	<a class="btn btn-link-2" href="listaGuardas.php">Ver Lista</a>
                             </div>
                         </div>
                         <div class="col-sm-5 form-box">
